more java 8 changes